packages/rust/crates/xiuxian-wendao-julia/tests/unit/plugin/snapshots/xiuxian_wendao_julia__modelica_plugin__relations__tests__doc_targets_for_annotation_doc_links_users_guide_docs_to_owner_modules.snap
---
source: packages/rust/crates/xiuxian-wendao-julia/src/modelica_plugin/../../tests/unit/plugin/relations.rs
assertion_line: 166
expression: payload
---
[
  {
    "path": "UsersGuide/Overview.mo",
    "targets": [
      "repo:modelica-demo:module:DemoLib",
      "repo:modelica-demo:module:DemoLib.UsersGuide"
    ]
  },
  {
    "path": "Controllers/UsersGuide/Tuning.mo",
    "targets": [
      "repo:modelica-demo:module:DemoLib.Controllers",
      "repo:modelica-demo:module:DemoLib.Controllers.UsersGuide"
    ]
  },
  {
    "path": "Controllers/UsersGuide/Tutorial/FirstSteps.mo",
    "targets": [
      "repo:modelica-demo:module:DemoLib.Controllers",
      "repo:modelica-demo:module:DemoLib.Controllers.UsersGuide",
      "repo:modelica-demo:module:DemoLib.Controllers.UsersGuide.Tutorial"
    ]
  }
]
